Issue: #17 the image is getting out of the box

--- a/src/components/auth/auth.css
+++ b/src/components/auth/auth.css
@@ -95,7 +95,6 @@ h1 {
   width: 34.58vw;
   height: 58.89vh;
   margin: 5.89vh 38.33vw 0vh 0vw;
-  position: absolute;
 }
 .bluecircleimg {
   position: absolute;
